2009-09-17 09:34  rsbivand

	* DESCRIPTION: fix licence

2008-01-30 17:29  rsbivand

	* DESCRIPTION, R/spkernel2d.R: grd in spkernel2d

2007-09-04 14:55  rsbivand

	* ChangeLog, INDEX, inst/ChangeLog: Changelog

2007-08-23 09:37  rsbivand

	* ChangeLog, DESCRIPTION, inst/ChangeLog, man/areapl.Rd,
	  man/n2dist.Rd: n2dist docs

2007-04-23 06:48  rsbivand

	* DESCRIPTION, INDEX, R/khat.S, man/khat.Rd: wrong polygon on khat

2007-03-30 07:05  rsbivand

	* DESCRIPTION, R/tribble.S, man/khat.Rd, man/print.ribfit.Rd: tidy

2007-03-29 16:34  rsbivand

	* DESCRIPTION, INDEX, R/Kenv.label.S, R/rlabel.S, R/shift.S,
	  R/tor.shift.S, man/Kenv.label.Rd, man/rlabel.Rd,
	  man/rtor.shift.Rd, man/shift.Rd, man/tor.shift.Rd: disambiguate
	  rlabel and shift

2006-09-22 16:14  rsbivand

	* DESCRIPTION, src/bounds.cmn, src/bounds.h, src/cncvwt.f,
	  src/dokhat.f, src/ipippa.f, src/k12hat.f, src/khvc.f,
	  src/khvmat.f, src/sekhat.f, src/stsecal.f, src/weight.f: bounds.h

2006-09-21 21:46  rsbivand

	* DESCRIPTION, R/spkernel2d.R, man/kernel2d.Rd: R 2.4.0

2006-04-11 20:27  rsbivand

	* INDEX, R/spkernel2d.R: spkernel2d and bboxx

2006-04-10 21:15  rsbivand

	* DESCRIPTION, R/Kenv.tor.S, R/bbox.S, R/csr.S, R/gridpts.S,
	  R/kernel2d.S, R/kerview.S, R/rtor.shift.S, R/tor.shift.S,
	  R/zoom.S, man/Kenv.label.Rd, man/Kenv.tor.Rd, man/Kenv.tor1.Rd,
	  man/bbox.Rd, man/k12hat.Rd, man/kernel2d.Rd, man/kernrat.Rd,
	  man/sbox.Rd: spkernel2d and bboxx

2005-04-11 20:13  rsbivand

	* DESCRIPTION, R/kernrat.S, data/amacrines.rda, man/amacrines.Rd,
	  man/burkitt.Rd, man/kernrat.Rd, src/nndist.f: e40 to d40

2004-11-01 18:54  rsb

	* DESCRIPTION, INDEX, R/Kenv.pcp.R, R/pcp.sim.R, R/pointmap.S,
	  R/polymap.S, R/tor.shift.S, data/burkitt.rda, man/Kenv.pcp.Rd,
	  man/addpoints.Rd, man/nndistF.Rd, man/nndistG.Rd, man/pcp.sim.Rd,
	  man/pointmap.Rd, man/polymap.Rd, man/spoints.Rd, src/tribble.f:
	  pre lancs

2003-10-28 19:26  rsb

	* DESCRIPTION, INDEX, R/Kenv.tor.S, man/Kenv.tor.Rd,